--- a/teaching.html
+++ b/teaching.html
@@ -86,9 +86,9 @@
 
             <h2 class="mb-5">Teaching</h2>
             
-            <div class="card card-horizontal mb-2">
-                <div class="card-body">
-                    <h4 class="card-title">Lecturer</h4>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="mb-5">Lecturer</h4>
                     <div class="table-responsive">
                         <table class="table table-hover table-sm" style="cursor: pointer;">
                             <thead class="thead-light">
@@ -105,8 +105,8 @@
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2018/19 (yearly course)<br/> </td>
-                                    <td><i>taught with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
+                                    <td>2018/19 (yearly course)<br/>2019/20 (yearly course)</td>
+                                    <td><i>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -114,65 +114,65 @@
                 </div>
             </div>
 
-            <div class="card card-horizontal mb-2">
-                    <div class="card-body">
-                        <h4 class="card-title">Teaching Assistant</h4>
-                        <div class="table-responsive">
-                            <table class="table table-hover table-sm">
-                                    <thead class="thead-light">
-                                        <tr>
-                                            <th>Course</th>
-                                            <th>Degree</th>
-                                            <th>University</th>
-                                            <th>Professor</th>
-                                            <th>Period</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Programming I</td>
-                                            <td>BSc</td>
-                                            <td>University of Salerno</td>
-                                            <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
-                                            <td>2016/17 (Fall Semester)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Programming I</td>
-                                            <td>BSc</td>
-                                            <td>University of Salerno</td>
-                                            <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
-                                            <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Software Engineering, Management and Evolution</td>
-                                            <td>MSc</td>
-                                            <td>University of Salerno</td>
-                                            <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                            <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Software Engineering: Maintenance and Testing</td>
-                                            <td>MSc</td>
-                                            <td>University of Salerno</td>
-                                            <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                            <td>2015/16 (Fall Semester)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Software Engineering</td>
-                                            <td>BSc</td>
-                                            <td>University of Salerno</td>
-                                            <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                            <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Web Development</td>
-                                            <td>BSc</td>
-                                            <td>University of Salerno</td>
-                                            <td>-</td>
-                                            <td>2016/17 (Fall Semester)</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="mb-5">Teaching Assistant</h4>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-sm">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Course</th>
+                                        <th>Degree</th>
+                                        <th>University</th>
+                                        <th>Professor</th>
+                                        <th>Period</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Programming I</td>
+                                        <td>BSc</td>
+                                        <td>University of Salerno</td>
+                                        <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
+                                        <td>2016/17 (Fall Semester)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Programming I</td>
+                                        <td>BSc</td>
+                                        <td>University of Salerno</td>
+                                        <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
+                                        <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Software Engineering, Management and Evolution</td>
+                                        <td>MSc</td>
+                                        <td>University of Salerno</td>
+                                        <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
+                                        <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Software Engineering: Maintenance and Testing</td>
+                                        <td>MSc</td>
+                                        <td>University of Salerno</td>
+                                        <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
+                                        <td>2015/16 (Fall Semester)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Software Engineering</td>
+                                        <td>BSc</td>
+                                        <td>University of Salerno</td>
+                                        <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
+                                        <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Web Development</td>
+                                        <td>BSc</td>
+                                        <td>University of Salerno</td>
+                                        <td>-</td>
+                                        <td>2016/17 (Fall Semester)</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
