Update cv and research interests

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
                         In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
                         My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
-                        To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>static analysis</i> of source code.<br/>
+                        To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>pattern mining</i> of source code.<br/>
                         <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
                     </div>
                 </div>
@@ -104,13 +104,19 @@
                     <div class="col-sm-6">
                         <h3 class="mb-2">Research Interests</h3>
                         <ul>
+                            <li>Artificial Intelligence for Software Engineering</li>
+                            <ul>
+                                <li>Machine Learning for Software Engineering</li>
+                                <li>Search-based Software Engineering</li>
+                                <li>Pattern Mining of Source Code</li>
+                            </ul>
                             <li>Empirical Software Engineering</li>
-                            <li>Mining Software Repositories</li>
-                            <li>Machine Learning for Software Engineering</li>
-                            <li>Pattern Mining of Source Code</li>
-                            <li>Energy Optimization of Mobile Apps</li>
-                            <li>Search-based Software Engineering</li>
-                            <li>Software Quality</li>
+                            <ul>
+                                <li>Software Maintenance and Evolution</li>
+                                <li>Software Testing</li>
+                                <li>Mining Software Repositories</li>
+                                <li>Green Software Engineering</li>
+                            </ul>
                         </ul>
                     </div>
                     <div class="col-sm-6">
