Add data statistics in Tilburg. Add SoHeal. Update CV.

--- a/services.html
+++ b/services.html
@@ -91,6 +91,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            <a href="https://soheal.github.io/" target="blank">3rd International Workshop on Software Health</a>: Organizer<br/>
                             <a href="https://conf.researchr.org/home/icpc-2020" target="blank">28th International Conference on Program Comprehension</a>: Publicity Chair<br/>
                             <a href="https://2020.programming-conference.org/home/eniac-2020" target="blank">1st International Workshop on ENgineering Intelligent Applications' Code</a>: Program Chair<br/>
                             <a href="http://soft.vub.ac.be/benevol2019/" target="blank">18th Belgium-Netherlands Software Evolution Workshop</a>: Organizer<br/>
