--- a/teaching.html
+++ b/teaching.html
@@ -102,6 +102,13 @@
                             </thead>
                             <tbody>
                                 <tr onclick="window.open('http://soft.vub.ac.be/~ddinucci/capita_selecta_se/', '_blank')">
+                                    <td>Data Statistics</td>
+                                    <td>BSc</td>
+                                    <td>Tilburg University</td>
+                                    <td>2019/20</td>
+                                    <td><i>co-lectured with <a href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein" target="blank">	prof. M.C. Kaptein</a></i></td>
+                                </tr>
+                                <tr onclick="window.open('http://soft.vub.ac.be/~ddinucci/capita_selecta_se/', '_blank')">
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
