--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                         <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
                         In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
                         My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
-                        To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>pattern mining</i> of source code.<br/>
+                        To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>mining of software repositories</i>.<br/>
+                        I serve and had served as a program committee member of various international conferences (e.g., ESEC/FSE, ICSME), and as referee for various international journals in the field of software engineering (e.g., TSE, EMSE, JSS) and artificial intelligence (e.g., TKDE, Neurocomputing).
                         <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
                     </div>
                 </div>
