--- a/projects.html
+++ b/projects.html
@@ -95,6 +95,8 @@
                     </div>
                 </div>
 
+                <h2 class="mb-2">Previous Projects</h2>
+
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">INTiMALS</h4>
