--- a/services.html
+++ b/services.html
@@ -115,6 +115,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA) - Journal First Track: 2020<br/>
+                            IEEE International Conference on Program Comprehension (ICPC) - Research Track: 2020<br/>
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Research Track: 2020<br/>
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Tool Demo Track: 2020<br/>
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Journal First Track: 2020<br/>
