--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
-                        In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
+                        <p class="mb-5 text-justify">I am an assistant professor at the <a href="https://www.jads.nl/" target="_blank">Jheronimus Academy of Data Science</a>, a joint collaboration between Tilburg University and Eindhoven Technical University.<br/>
+                        From 2018 to 2019 I have been postdoctoral fellow at the <a href="http://soft.vub.ac.be/soft/" target="_blank">Software Languages Lab</a> of the <a href="https://www.vub.be/" target="_blank">Vrije Universiteit Brussel</a> with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
+                        In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank">Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
                         My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
                         To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>mining of software repositories</i>.<br/>
-                        I serve and had served as a program committee member of various international conferences (e.g., ESEC/FSE, ICSME), and as referee for various international journals in the field of software engineering (e.g., TSE, EMSE, JSS) and artificial intelligence (e.g., TKDE, Neurocomputing).
+                        I serve and had served as a program committee member of various international conferences (e.g., ESEC/FSE, ICSME, SANER, ICPC), and as referee for various international journals in the field of software engineering (e.g., TSE, TOSEM, EMSE, JSS) and artificial intelligence (e.g., TKDE, Neurocomputing).
                         <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
                     </div>
                 </div>
@@ -105,32 +106,31 @@
                     <div class="col-sm-6">
                         <h3 class="mb-2">Research Interests</h3>
                         <ul>
-                            <li>Artificial Intelligence for Software Engineering</li>
-                            <ul>
-                                <li>Machine Learning for Software Engineering</li>
-                                <li>Search-based Software Engineering</li>
-                                <li>Pattern Mining of Source Code</li>
-                            </ul>
-                            <li>Empirical Software Engineering</li>
-                            <ul>
-                                <li>Software Maintenance and Evolution</li>
-                                <li>Software Testing</li>
-                                <li>Mining Software Repositories</li>
-                                <li>Green Software Engineering</li>
-                            </ul>
+                            <li>Artificial Intelligence for Software Engineering
+                                <ul>
+                                    <li>Machine Learning for Software Engineering</li>
+                                    <li>Search-based Software Engineering</li>
+                                    <li>Pattern Mining of Source Code</li>
+                                </ul>
+                            </li>
+                            <li>Empirical Software Engineering
+                                <ul>
+                                    <li>Software Maintenance and Evolution</li>
+                                    <li>Software Testing</li>
+                                    <li>Mining Software Repositories</li>
+                                    <li>Green Software Engineering</li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <p class="mb-5 text-center">
                             <a href="http://soft.vub.ac.be/" target="_blank">
-                                <img id="vub-logo" src="img/soft-vub-full-pub.png" alt="" />
+                                <img id="vub-logo" src="img/jads.png" alt="" />
                             </a>
-                            <br/> Software Languages Lab
-                            <br/> Vrije Universiteit Brussel
-                            <br/> Pleinlaan 2
-                            <br/> B-1050 Brussels - Belgium
-                            <br/> Office 10F725
-                            <br/> Telephone +32 2 629 29 65
+                            <br/> Jheronimus Academy of Data Science
+                            <br/> Sint Janssingel 92
+                            <br/> 5211 DA 's-Hertogenbosch - The Netherlands
                         </p>
                     </div>
                 </div>
