--- a/teaching.html
+++ b/teaching.html
@@ -101,18 +101,18 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr onclick="window.open('http://soft.vub.ac.be/~ddinucci/capita_selecta_se/', '_blank')">
+                                <tr>
                                     <td>Data Statistics</td>
                                     <td>BSc</td>
                                     <td>Tilburg University</td>
-                                    <td>2019/20</td>
+                                    <td>Fall 2019</td>
                                     <td><i>co-lectured with <a href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein" target="blank">	prof. M.C. Kaptein</a></i></td>
                                 </tr>
-                                <tr onclick="window.open('http://soft.vub.ac.be/~ddinucci/capita_selecta_se/', '_blank')">
+                                <tr>
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2018/19 (yearly course)<br/>2019/20 (yearly course)</td>
+                                    <td>2019/20 (yearly course)<br/>2018/19 (yearly course)</td>
                                     <td><i>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
                                 </tr>
                             </tbody>
@@ -131,52 +131,39 @@
                                         <th>Course</th>
                                         <th>Degree</th>
                                         <th>University</th>
-                                        <th>Professor</th>
                                         <th>Period</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Programming I</td>
-                                        <td>BSc</td>
-                                        <td>University of Salerno</td>
-                                        <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
-                                        <td>2016/17 (Fall Semester)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Programming I</td>
-                                        <td>BSc</td>
-                                        <td>University of Salerno</td>
-                                        <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
-                                        <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
-                                    </tr>
-                                    <tr>
                                         <td>Software Engineering, Management and Evolution</td>
                                         <td>MSc</td>
                                         <td>University of Salerno</td>
-                                        <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                        <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
+                                        <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)<br/> Spring 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
                                     </tr>
                                     <tr>
-                                        <td>Software Engineering: Maintenance and Testing</td>
-                                        <td>MSc</td>
-                                        <td>University of Salerno</td>
-                                        <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                        <td>2015/16 (Fall Semester)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Software Engineering</td>
+                                        <td>Programming I</td>
                                         <td>BSc</td>
                                         <td>University of Salerno</td>
-                                        <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                        <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
+                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a>)</td>
                                     </tr>
                                     <tr>
                                         <td>Web Development</td>
                                         <td>BSc</td>
                                         <td>University of Salerno</td>
-                                        <td>-</td>
-                                        <td>2016/17 (Fall Semester)</td>
+                                        <td>Fall 2016</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Software Engineering</td>
+                                        <td>BSc</td>
+                                        <td>University of Salerno</td>
+                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Software Engineering: Maintenance and Testing</td>
+                                        <td>MSc</td>
+                                        <td>University of Salerno</td>
+                                        <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
                                     </tr>
                                 </tbody>
                             </table>
