--- a/teaching.html
+++ b/teaching.html
@@ -102,18 +102,25 @@
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>Introduction to Machine Learning</td>
+                                    <td>Pre-MSc</td>
+                                    <td>Tilburg University, Technical University Eindhoven</td>
+                                    <td>Spring 2020</td>
+                                    <td>co-lectured with <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en" target="blank">	prof. D.A. Tamburri</a></td>
+                                </tr>
+                                <tr>
                                     <td>Data Statistics</td>
                                     <td>BSc</td>
-                                    <td>Tilburg University</td>
+                                    <td>Tilburg University, Technical University Eindhoven</td>
                                     <td>Fall 2019</td>
-                                    <td><i>co-lectured with <a href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein" target="blank">	prof. M.C. Kaptein</a></i></td>
+                                    <td>co-lectured with <a href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein" target="blank">	prof. M.C. Kaptein</a></td>
                                 </tr>
                                 <tr>
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
                                     <td>2019/20 (yearly course)<br/>2018/19 (yearly course)</td>
-                                    <td><i>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
+                                    <td>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. C. De Roover</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -139,13 +146,13 @@
                                         <td>Software Engineering, Management and Evolution</td>
                                         <td>MSc</td>
                                         <td>University of Salerno</td>
-                                        <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)<br/> Spring 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
+                                        <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)<br/> Spring 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
                                     </tr>
                                     <tr>
                                         <td>Programming I</td>
                                         <td>BSc</td>
                                         <td>University of Salerno</td>
-                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a>)</td>
+                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. R. Distasi</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. E. Fischetti</a>)</td>
                                     </tr>
                                     <tr>
                                         <td>Web Development</td>
@@ -157,13 +164,13 @@
                                         <td>Software Engineering</td>
                                         <td>BSc</td>
                                         <td>University of Salerno</td>
-                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
+                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)</td>
                                     </tr>
                                     <tr>
                                         <td>Software Engineering: Maintenance and Testing</td>
                                         <td>MSc</td>
                                         <td>University of Salerno</td>
-                                        <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
+                                        <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)</td>
                                     </tr>
                                 </tbody>
                             </table>
