--- a/teaching.html
+++ b/teaching.html
@@ -146,7 +146,7 @@
                                         <td>Software Engineering, Management and Evolution</td>
                                         <td>MSc</td>
                                         <td>University of Salerno</td>
-                                        <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)<br/> Spring 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a>)</td>
+                                        <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)<br/> Spring 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)</td>
                                     </tr>
                                     <tr>
                                         <td>Programming I</td>
