--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div class="col-sm-12">
                         <ul class="list-inline list-social-icons mb-0">
                             <li class="list-inline-item">
-                                <a href="mailto:dario.di.nucci@vub.be">
+                                <a href="mailto:d.dinucci@uvt.nl">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
