--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="mb-5 text-justify">I am an assistant professor at the <a href="https://www.jads.nl/" target="_blank">Jheronimus Academy of Data Science</a>, a joint collaboration between Tilburg University and Eindhoven Technical University.<br/>
-                        From 2018 to 2019 I have been postdoctoral fellow at the <a href="http://soft.vub.ac.be/soft/" target="_blank">Software Languages Lab</a> of the <a href="https://www.vub.be/" target="_blank">Vrije Universiteit Brussel</a> with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
+                        From 2018 to 2019 I have been a postdoctoral fellow at the <a href="http://soft.vub.ac.be/soft/" target="_blank">Software Languages Lab</a> of the <a href="https://www.vub.be/" target="_blank">Vrije Universiteit Brussel</a> with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
                         In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank">Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
-                        My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
+                        My research is on <i>empirical software engineering</i>, in particular, <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
                         To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>mining of software repositories</i>.<br/>
                         I serve and had served as a program committee member of various international conferences (e.g., ESEC/FSE, ICSME, SANER, ICPC), and as referee for various international journals in the field of software engineering (e.g., TSE, TOSEM, EMSE, JSS) and artificial intelligence (e.g., TKDE, Neurocomputing).
                         <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
