Add EASE as additional reviewer

--- a/services.html
+++ b/services.html
@@ -155,6 +155,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            International Conference on Evaluation and Assessment in Software Engineering (EASE): 2020<br/>
                             IEEE International Conference on Program Comprehension (ICPC): 2016, 2018, 2019<br/>
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2017, 2018<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME): 2016 (ERA Track), 2018<br/>
