--- a/projects.html
+++ b/projects.html
@@ -89,13 +89,23 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
+                        <h4 class="card-title">RADON H2020</h4>
+                        <p class="card-text text-justify small">The RADON project team will work on proposing a DevOps framework for creating and managing microservices-based applications that can optimally exploit serverless computing technologies. This framework will be “crash-tested” in the development of 3 different applications, which will include fine-grained and independently deployable microservices that can efficiently exploit FaaS and container technologies.
+
+                        The end goal is to broaden the adoption of serverless computing technologies within the European software industry. The methodology will strive to tackle complexity, harmonize the abstraction and actuation of action-trigger rules, avoid FaaS lock-in, and optimize decomposition and reuse through model-based FaaS-enabled development and orchestration.</p>
+                        <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web site</a></p>
+                    </div>
+                </div>
+
+                <h2 class="mb-2">Previous Projects</h2>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
                         <h4 class="card-title">SECO-ASSIST 2018-2021</h4>
                         <p class="card-text text-justify small">Software ecosystems are the most promising avenue for organising the software needs of the digital era. Jointly funded by F.R.S.-FNRS and FWO-Vlaanderen, the four-year Excellence of Science Project SECO-ASSIST aims to realise a scientific breakthrough to nurture the ecosystems of the future, by providing novel software recommendation techniques that address the resilience, evolvability, heterogeneity, and social interaction. To achieve this the project partners will combine their expertise in social networks (UMONS), software testing (UAntwerpen), software reuse (VUB) and database evolution (UNamur).</p>
                         <p class="card-text"><a href="https://secoassist.github.io/" target="_blank">Web site</a></p>
                     </div>
                 </div>
-
-                <h2 class="mb-2">Previous Projects</h2>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
@@ -111,15 +121,15 @@
                         <div class="card-body">
                             <h4 class="card-title">SoCRATES</h4>
                             <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test smells in Scala/SBT projects. It automatically detects and reports on 6 test smells including 4 variants of General Fixture.<br/> SoCRATES is released under MIT license.</p>
-                            <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Web site</a></p>
+                            <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Github</a></p>
                         </div>
                     </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">aDoctor</h4>
-                        <p class="card-text text-justify small">aDoctor is a tool able to identify 15 Android-specific code smells from the catalogue by Reimann et al. It is built on top of the Eclipse Java Development Toolkit (JDT)<br/> aDoctor is released under MIT license.</p>
-                        <p class="card-text"><a href="https://github.com/fpalomba/aDoctor" target="_blank">Web site</a></p>
+                        <p class="card-text text-justify small">aDoctor is a tool able to identify and refactor five Android-specific code smells from the catalogue by Reimann et al. It is provide as a plugin for IntelliJ IDEAD<br/> aDoctor is released under MIT license.</p>
+                        <p class="card-text"><a href="https://plugins.jetbrains.com/plugin/13443-adoctor" target="_blank">Plugin</a> - <a href="https://github.com/emaiannone/aDoctor" target="_blank">Source Code</a> - <a href="https://www.youtube.com/watch?v=1c2EhVXiKis" target="_blank">Video</a></p>
                     </div>
                 </div>
 
@@ -127,7 +137,7 @@
                     <div class="card-body">
                         <h4 class="card-title">PETrA</h4>
                         <p class="card-text text-justify small">PETrA is a software able to estimate the energy consumption of method calls in Android apps. It is based on some Android tools that are Monkey, Batterystats, Systrace, and dmtracedump.</p>
-                        <p class="card-text"><a href="http://tinyurl.com/je2nxkd" target="_blank">Web site</a></p>
+                        <p class="card-text"><a href="http://tinyurl.com/je2nxkd" target="_blank">Web site</a> - <a href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank">Video</a></p>
                     </div>
                 </div>
                 
