--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,9 @@
                     <h5 class="card-title">Awards</h5>
                     <ul class="fa-ul mb-0">
                         <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and Software, 2019
+                        </li>
+                        <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States, 2016
                         </li>
                         <li>
