--- a/publications.html
+++ b/publications.html
@@ -14,8 +14,10 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
@@ -25,7 +27,7 @@
     <link href="css/resume.css" rel="stylesheet">
     <link href="css/academicons.css" rel="stylesheet" />
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57094101-2"></script>
     <script>
@@ -38,7 +40,7 @@
 
         gtag('config', 'UA-57094101-2');
 
-        gtag('set', {'user_id': 'USER_ID'});
+        gtag('set', { 'user_id': 'USER_ID' });
 
     </script>
 
@@ -48,13 +50,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-left" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="index.html">
-        <span class="d-block d-lg-none">Dario Di Nucci</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
-        </span>
+            <span class="d-block d-lg-none">Dario Di Nucci</span>
+            <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+            </span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -76,7 +79,7 @@
         </div>
         <span class="d-none d-lg-block text-center">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="" />
             </a>
         </span>
     </nav>
@@ -90,7 +93,8 @@
             <div class="card mb-2">
                 <div class="card-body">
                     <h5 class="card-title">Publications</h5>
-                    <p class="card-text">You can find the complete list of my publications <a target="blank" href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.</p>
+                    <p class="card-text">You can find the complete list of my publications <a target="blank"
+                            href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.</p>
                 </div>
             </div>
 
@@ -99,18 +103,21 @@
                     <h5 class="card-title">Awards</h5>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and Software, 2019
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and
+                            Software, 2019
                         </li>
                         <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States, 2016
+                            <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on
+                            Search-Based Software Engineering, Raleigh, NC, United States, 2016
                         </li>
                         <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i> ACM SIGSOFT travel support - 37th International Conference on Software Engineering, Florence, Italy, 2015
+                            <i class="fa-li fa fa-trophy text-warning"></i> ACM SIGSOFT travel support - 37th
+                            International Conference on Software Engineering, Florence, Italy, 2015
                         </li>
                     </ul>
                 </div>
             </div>
-            
+
         </section>
 
     </div>
