--- a/teaching.html
+++ b/teaching.html
@@ -14,8 +14,10 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
@@ -25,7 +27,7 @@
     <link href="css/resume.css" rel="stylesheet">
     <link href="css/academicons.css" rel="stylesheet" />
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57094101-2"></script>
     <script>
@@ -38,7 +40,7 @@
 
         gtag('config', 'UA-57094101-2');
 
-        gtag('set', {'user_id': 'USER_ID'});
+        gtag('set', { 'user_id': 'USER_ID' });
 
     </script>
 
@@ -48,13 +50,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-left" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="index.html">
-        <span class="d-block d-lg-none">Dario Di Nucci</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
-        </span>
+            <span class="d-block d-lg-none">Dario Di Nucci</span>
+            <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+            </span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -76,7 +79,7 @@
         </div>
         <span class="d-none d-lg-block text-center">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="" />
             </a>
         </span>
     </nav>
@@ -85,7 +88,7 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
 
             <h2 class="mb-5">Teaching</h2>
-            
+
             <div class="row">
                 <div class="col-sm-12">
                     <h4 class="mb-2">Lecturer</h4>
@@ -106,21 +109,26 @@
                                     <td>Pre-MSc</td>
                                     <td>Tilburg University, Technical University Eindhoven</td>
                                     <td>Spring 2020</td>
-                                    <td>co-lectured with <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en" target="blank">	prof. D.A. Tamburri</a></td>
+                                    <td>co-lectured with <a
+                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank"> prof. D.A. Tamburri</a></td>
                                 </tr>
                                 <tr>
                                     <td>Data Statistics</td>
                                     <td>BSc</td>
                                     <td>Tilburg University, Technical University Eindhoven</td>
                                     <td>Fall 2019</td>
-                                    <td>co-lectured with <a href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein" target="blank">	prof. M.C. Kaptein</a></td>
+                                    <td>co-lectured with <a
+                                            href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
+                                            target="blank"> prof. M.C. Kaptein</a></td>
                                 </tr>
                                 <tr>
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2019/20 (yearly course)<br/>2018/19 (yearly course)</td>
-                                    <td>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. C. De Roover</a></td>
+                                    <td>2019/20 (yearly course)<br />2018/19 (yearly course)</td>
+                                    <td>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof.
+                                            C. De Roover</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -133,50 +141,60 @@
                     <h4 class="mb-2">Teaching Assistant</h4>
                     <div class="table-responsive">
                         <table class="table table-hover table-sm">
-                                <thead class="thead-light">
-                                    <tr>
-                                        <th>Course</th>
-                                        <th>Degree</th>
-                                        <th>University</th>
-                                        <th>Period</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Software Engineering, Management and Evolution</td>
-                                        <td>MSc</td>
-                                        <td>University of Salerno</td>
-                                        <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)<br/> Spring 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Software Engineering</td>
-                                        <td>BSc</td>
-                                        <td>University of Salerno</td>
-                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Web Development</td>
-                                        <td>BSc</td>
-                                        <td>University of Salerno</td>
-                                        <td>Fall 2016</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Programming I</td>
-                                        <td>BSc</td>
-                                        <td>University of Salerno</td>
-                                        <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. R. Distasi</a>)<br/> Fall 2015 (<a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. E. Fischetti</a>)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Software Engineering: Maintenance and Testing</td>
-                                        <td>MSc</td>
-                                        <td>University of Salerno</td>
-                                        <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De Lucia</a>)</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>Course</th>
+                                    <th>Degree</th>
+                                    <th>University</th>
+                                    <th>Period</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Software Engineering, Management and Evolution</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">Prof. A. De Lucia</a>)<br /> Spring 2016 (<a
+                                            href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De
+                                            Lucia</a>)</td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering</td>
+                                    <td>BSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">Prof. A. De Lucia</a>)<br /> Fall 2015 (<a
+                                            href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De
+                                            Lucia</a>)</td>
+                                </tr>
+                                <tr>
+                                    <td>Web Development</td>
+                                    <td>BSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Fall 2016</td>
+                                </tr>
+                                <tr>
+                                    <td>Programming I</td>
+                                    <td>BSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home"
+                                            target="blank">Prof. R. Distasi</a>)<br /> Fall 2015 (<a
+                                            href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. E.
+                                            Fischetti</a>)</td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering: Maintenance and Testing</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">Prof. A. De Lucia</a>)</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
+            </div>
 
         </section>
 
