--- a/projects.html
+++ b/projects.html
@@ -152,7 +152,7 @@
                         <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test
                             smells in Scala/SBT projects. It automatically detects and reports on six test smells
                             including four variants of General Fixture. It is released under MIT license.</p>
-                        <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Github</a>
+                        <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Source Code</a>
                         </p>
                     </div>
                 </div>
