--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,7 @@
                             European software industry. The methodology will strive to tackle complexity, harmonize the
                             abstraction and actuation of action-trigger rules, avoid FaaS lock-in, and optimize
                             decomposition and reuse through model-based FaaS-enabled development and orchestration.</p>
-                        <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web site</a></p>
+                        <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
@@ -120,7 +120,7 @@
                             social interaction. To achieve this the project partners will combine their expertise in
                             social networks (UMONS), software testing (UAntwerpen), software reuse (VUB) and database
                             evolution (UNamur).</p>
-                        <p class="card-text"><a href="https://secoassist.github.io/" target="_blank">Web site</a></p>
+                        <p class="card-text"><a href="https://secoassist.github.io/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
@@ -140,7 +140,7 @@
                             mines. The success of the modernisation assistant hinges on the quality of the pattern
                             mining algorithms it incorporates and their ability to improve their results by learning
                             from their interaction with the software engineers.</p>
-                        <p class="card-text"><a href="http://soft.vub.ac.be/intimals/" target="_blank">Web site</a></p>
+                        <p class="card-text"><a href="http://soft.vub.ac.be/intimals/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
@@ -176,7 +176,7 @@
                         <p class="card-text text-justify small">PETrA is a software able to estimate the energy
                             consumption of method calls in Android apps. It is based on some Android tools that are
                             Monkey, Batterystats, Systrace, and dmtracedump.</p>
-                        <p class="card-text"><a href="http://tinyurl.com/je2nxkd" target="_blank">Web site</a> - <a
+                        <p class="card-text"><a href="http://tinyurl.com/je2nxkd" target="_blank">Web Site</a> - <a
                                 href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank">Video</a></p>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                         <p class="card-text text-justify small">Landfill is a Web-based platform for sharing code smell
                             datasets. It also provides a set of APIs for programmatically accessing its data. Anyone can
                             contribute by: improving existing datasets or sharing and posting new datasets.</p>
-                        <p class="card-text"><a href="http://soft.vub.ac.be/landfill/" target="_blank">Web site</a></p>
+                        <p class="card-text"><a href="http://soft.vub.ac.be/landfill/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
@@ -197,7 +197,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Gnome Maps</h4>
                         <p class="card-text text-justify small">Gnome Maps is a map application for GNOME.
-                            <p class="card-text"><a href="https://wiki.gnome.org/Apps/Maps" target="_blank">Web site</a>
+                            <p class="card-text"><a href="https://wiki.gnome.org/Apps/Maps" target="_blank">Web Site</a>
                             </p>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                             for routing on graphs. E.g. Dijkstra and A* but also optimized road routing algorithms like
                             Contraction Hierarchies. It stands under the Apache License and is build on a large test
                             suite.
-                            <p class="card-text"><a href="https://graphhopper.com" target="_blank">Web site</a></p>
+                            <p class="card-text"><a href="https://graphhopper.com" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
