Change font size

--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
             <div class="card mb-2">
                 <div class="card-body">
                     <h5 class="card-title">Publications</h5>
-                    <p class="card-text">You can find the complete list of my publications <a target="blank"
+                    <p class="card-text small">You can find the complete list of my publications <a target="blank"
                             href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.</p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
             <div class="card mb-2">
                 <div class="card-body">
                     <h5 class="card-title">Awards</h5>
-                    <ul class="fa-ul mb-0">
+                    <ul class="fa-ul mb-0 small">
                         <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and
                             Software, 2019
