--- a/teaching.html
+++ b/teaching.html
@@ -93,14 +93,13 @@
                 <div class="col-sm-12">
                     <h4 class="mb-2">Lecturer</h4>
                     <div class="table-responsive">
-                        <table class="table table-hover table-sm" style="cursor: pointer;">
+                        <table class="table table-hover small" style="cursor: pointer;">
                             <thead class="thead-light">
                                 <tr>
                                     <th>Course</th>
                                     <th>Degree</th>
                                     <th>University</th>
                                     <th>Period</th>
-                                    <th>Notes</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -108,27 +107,27 @@
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
                                     <td>Tilburg University, Technical University Eindhoven</td>
-                                    <td>Spring 2020</td>
-                                    <td>co-lectured with <a
+                                    <td>Spring 2020 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank"> prof. D.A. Tamburri</a></td>
+                                            target="blank"> Prof. D.A. Tamburri</a>)</td>
                                 </tr>
                                 <tr>
                                     <td>Data Statistics</td>
                                     <td>BSc</td>
                                     <td>Tilburg University, Technical University Eindhoven</td>
-                                    <td>Fall 2019</td>
-                                    <td>co-lectured with <a
+                                    <td>Fall 2019 (co-lectured with <a
                                             href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
-                                            target="blank"> prof. M.C. Kaptein</a></td>
+                                            target="blank"> Prof. M.C. Kaptein</a>)</td>
                                 </tr>
                                 <tr>
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2019/20 (yearly course)<br />2018/19 (yearly course)</td>
-                                    <td>co-lectured with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof.
-                                            C. De Roover</a></td>
+                                    <td>2019/20 (yearly course, co-lectured with <a
+                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof.
+                                            C. De Roover</a>) <br /> 2018/19 (yearly course, co-lectured with <a
+                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof.
+                                            C. De Roover</a>)</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -140,7 +139,7 @@
                 <div class="col-sm-12">
                     <h4 class="mb-2">Teaching Assistant</h4>
                     <div class="table-responsive">
-                        <table class="table table-hover table-sm">
+                        <table class="table table-hover small">
                             <thead class="thead-light">
                                 <tr>
                                     <th>Course</th>
